# awesome-greek-tech-jobs

./: CONTRIBUTING.MD  README.md  cliff.toml  code_of_conduct.md  contributing.md  generate_index.py  index.html  pyproject.toml  readme.md  readme.yaml  robots.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pr-validation.yaml  release-on-main.yaml  sync-on-main-merge.yaml
assets/css/: index.css
assets/js/: gtag-init.js  index.js  tailwind-config.js
data/: companies.yaml  queries.yaml  workable_counts.yaml
scripts/: __init__.py  fetch_workable_counts.py  generate_index.py  generate_readme.py
templates/: index_template.html
