[project]
name = "awesome-greek-tech-jobs"
version = "0.0.0"
description = "Generator tooling for the Awesome Greek Tech Jobs directory"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
